<resources>
    <string name="app_name">大学校内</string>
    <string name="tip_net_request_failed">网络请求失败</string>

    <string-array name="guide_tip_array">
        <item>探寻让你终身收益的知识，\n结交志同道合的伙伴</item>
        <item>分享你的大学专业课程</item>
        <item>可以发布任何内容：\n文字、GIF动图、音乐、随便什么</item>
        <item>分享你的视野和格局，\n让世界共识多一些，分歧少一些</item>
        <item>欢迎来到&#160;&#160;大学校内\n现在请按下按钮吧！</item>
    </string-array>

    <string name="action_start_browse">开始吧</string>
    <string name="action_login">登录</string>
    <string name="protocol_tip">马上就完成了。请轻按&#160;下一步，表示您已阅读了解隐私策略并同意服务条款</string>
    <string-array name="protocol_name_array">
        <item>隐私策略</item>
        <item>服务条款</item>
    </string-array>
    <string name="name_tip">我们该怎么称呼您？</string>
    <string name="name_desc">您需要一个用户名才能发帖、自定义您的"大学校内"博客，以及给他人发送消息</string>
    <string name="mobile_number">手机号码</string>
    <string name="security_code">验证码</string>
    <string name="action_next_step">下一步</string>
    <string name="action_send_security_code">发送验证码</string>
    <string name="user_name">用户名</string>
    <string name="has_user_account_tip">已经有账户了？</string>
    <string name="tip_please_input_year_of_birth">请输入出生年份</string>
    <string name="tip_year_of_birth_error">出生年份错误</string>
    <string name="tip_please_input_mobile_number">请输入手机号</string>
    <string name="tip_please_input_security_code">请输入验证码</string>
    <string name="tip_please_input_user_name">请输入用户名</string>
    <string name="time_count_down">%d&#160;s</string>
    <string name="action_complete">完成</string>
    <string name="interest_life">生活类</string>
    <string name="interest_major">专业类</string>
    <string name="interest_next_step">(%1$d/%2$d)下一步</string>
    <string name="tip_selected_interest_reach_limit">您最多可以选择%d个兴趣爱好</string>


    <string name="tab_home">主页</string>
    <string name="tab_search">搜索</string>
    <string name="tab_msg">消息</string>
    <string name="tab_me">我的</string>
    <string name="recommended">为您推荐</string>
    <string name="action_concern">关注</string>
    <string name="action_cancel_concern">取消关注</string>
    <string name="hint_search_college">搜索大学校内</string>
    <string name="blog_source_search">搜索</string>
    <string name="blog_source_recommended">推荐</string>

    <string name="action_publish">发布</string>
    <string name="title_publish_blog">发布博客</string>
    <string name="action_add">添加</string>
    <string name="action_select_by_camera">相机拍摄</string>
    <string name="action_select_by_gallery">相册选择</string>
    <string name="tip_video_publish_size_limit">您每次最多只能发布一条视频</string>
    <string name="tip_image_handle_failed">图片处理失败</string>
    <string name="tip_dir_make_failed">文件夹创建失败</string>
    <string name="tip_video_handle_failed">视频处理失败</string>
    <string name="tip_video_loading">视频加载中&#8230;</string>
    <string name="tip_gif_making">Gif 制作中&#8230;</string>
    <string name="tip_select_color">颜色选择</string>

    <!--消息-->
    <string-array name="msg_tab_title">
        <item>动态</item>
        <item>消息</item>
    </string-array>
    <string name="action_send">发送</string>
    <string name="tip_release_to_load_more">释放加载更多</string>
    <string name="tip_loading">正在加载</string>
    <string name="tip_loading_complete">加载完成</string>

    <!--我的页面-->
    <string name="action_subscribe">订阅(¥%s)</string>
    <string name="subscribe">订阅</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>
    <!--消息-->
    <string-array name="personal_tab_title">
        <item>课程</item>
        <item>帖子</item>
        <item>喜欢</item>
        <item>订阅</item>
    </string-array>
    <string name="personal_info">个人信息</string>

    <!--课程相关-->
    <string name="tip_subscribe">订阅后查看更多课程内容</string>
    <string name="action_subscribe_now">立即订阅</string>
    <string name="all">全部</string>

    <string name="base_info">基本信息</string>
    <string name="college_info">校内信息</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="city">所在城市</string>
    <string name="personal_motto">个性签名</string>
    <string name="college_name">学校</string>
    <string name="college_start_year">入学年份</string>
    <string name="major">专业</string>
    <string name="grade">年级</string>
    <string-array name="gender_array">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="grade_array">
        <item>大学一年级</item>
        <item>大学二年级</item>
        <item>大学三年级</item>
        <item>大学四年级</item>
    </string-array>
</resources>
