<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_left"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/margin_super"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_back" />

    <ImageView
        android:id="@+id/iv_guide_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_larger"
        android:src="@drawable/ic_guide_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/margin_super"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_mobile"
            style="@style/style_text_normal_ashen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_edit_height"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:paddingBottom="@dimen/margin_small"
            android:textColorHint="@color/color_common_ashen"
            android:textCursorDrawable="@drawable/bg_common_et_cursor" />

        <ImageView
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/bg_common_et_bottom_line_unfocused" />

        <LinearLayout
            android:id="@+id/ll_security_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_edit_height"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_security_code"
                style="@style/style_text_normal_ashen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="2.0"
                android:background="@null"
                android:gravity="bottom"
                android:hint="@string/security_code"
                android:inputType="number"
                android:paddingBottom="@dimen/margin_small"
                android:textColorHint="@color/color_common_ashen"
                android:textCursorDrawable="@drawable/bg_common_et_cursor" />

            <View
                android:layout_width="@dimen/common_divider_thickness"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/color_common_ashen" />

            <TextView
                android:id="@+id/tv_get_security_code"
                style="@style/style_text_normal_ashen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:paddingStart="@dimen/margin_normal"
                android:text="@string/action_send_security_code" />
        </LinearLayout>

        <ImageView
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/bg_common_et_bottom_line_unfocused" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        style="@style/style_text_large_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/confirm_btn_height"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/margin_super"
        android:background="@drawable/bg_login_btn"
        android:gravity="center"
        android:text="@string/action_login" />
</LinearLayout>